--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@vanilla-extract/css": "^1.16.1",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
