--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.0",
+    "@mui/x-data-grid": "^7.27.2",
+    "@mui/x-date-pickers": "^7.27.1",
     "@react-oauth/google": "^0.12.1",
     "@vanilla-extract/css": "^1.16.1",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
